First whole working project. Unit tests for the BasketSplitter class written, Reflection used for private methods in BasketSplitter class to test them as well.